@@ -5,4 +5,4 @@
 #
 # svn propset svn:externals -F ./EXTERNALS.TXT .
 #
-GenericSetup svn://svn.zope.org/repos/main/GenericSetup/tags/CMF-2.1.0-beta
+GenericSetup -r77021 svn://svn.zope.org/repos/main/GenericSetup/trunk
