@@ -64,6 +64,8 @@ CMF 2.1.0-beta2 (unreleased)
 
   Other
 
+    - CMFDefault: Adjusted factory.py to new GenericSetup version.
+
     - CMFUid.UniqueIdAnnotationTool: Annotation handling has been switched
       from triggering it through old-style manage_*-methods to using
       events. UID assigning behavior has been made more flexible. Please
